fix red gradient on ios, fixes #5

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,11 +72,11 @@ nav.navbar {
     outline: none;
   }
   &.bg-light {
-    background: linear-gradient(to bottom, rgba(201,201,201,1), rgba(255,0,0,0));
+    background: linear-gradient(to bottom, rgba(201,201,201,1), rgba(0,0,0,0));
     padding-bottom: 40px;
   }
   &.bg-dark {
-    background: linear-gradient(to bottom, #565656, rgba(255,0,0,0));
+    background: linear-gradient(to bottom, #565656, rgba(0,0,0,0));
     padding-bottom: 120px;
   }
   .navbar-nav {
